--- a/5-atsiskaitymas/css/styles.css
+++ b/5-atsiskaitymas/css/styles.css
@@ -1,5 +1,5 @@
 * {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Manrope', sans-serif;
 }
 
 body {
@@ -46,6 +46,10 @@ nav .navbar-nav .nav-item .nav-link:hover {
 
 /* Headeris */
 
+header img.phone-head-ft {
+    display: none;;
+}
+
 header {
     padding-top: 45px;
     background-color: black;
@@ -82,7 +86,8 @@ header .portfolio-text-block p {
 
 div.star-icon { 
     position: relative;
-    top: 43%;
+    top: 40%;
+    left: -3%;
 }
 
 div.scroll-text {
@@ -148,7 +153,7 @@ div.logo-banner .logo-grey-field {
     padding-top: 8px;
 }
 
-hr {
+hrs {
     padding: 30px;}
 
 
@@ -170,10 +175,10 @@ div.card-body {
     margin-left: 15px;
 }
 
-div .container.minimize-padding{
-    max-width: 1020px;
-    padding: 130px 0;
+div.mb-0 {
+    
 }
+
 
 div.container.minimize-padding p.faq-abbreviation {
     color: #797C86;
@@ -186,10 +191,194 @@ div.container.minimize-padding p.faq-full {
     line-height: 30px;
     padding: 15px 0 25px 0;
     color: #FFFFFF;
+    text-transform: uppercase;
 }
 
 .arrows {
     width: 10%;
     display: inline-block;
     margin-left: 40px;
+}
+
+.container {
+    max-width: 1080px;
+}
+
+.client-feedback img {
+ height: 45px;
+}
+
+button.testimonial-btn {
+    background-color: #1C1C21;
+    height: 35px;
+    border: none;
+    color: #fff;
+    text-align: center;
+    font-size: 14px;
+    margin: 7px;
+    padding: 5px;
+}
+
+p.testimonials {
+    color: #797C86;
+    font-size: 15px;
+    padding-left: 0px;
+}
+
+p.feedback {
+    font-size: 44px;
+    line-height: 30px;
+    padding: 15px 0 25px 0;
+    color: #FFFFFF;
+    text-transform: uppercase;
+}
+
+.client-feedback p.total-reviewed {
+    color: #62646C;
+    line-height: 150%;
+    font-size: 14px;
+    padding-left: 0px;;
+}
+
+.client-feedback p.review-count {
+    color: #CACACE;
+    font-size: 15px;
+    line-height: 150%;
+    margin-top: 10px;
+}
+
+/* Testimonials */
+
+.card-title span {
+    padding-top: 5px;
+    display: flex;
+}
+.checked {
+    color: #FFCE22;
+  }
+
+.card-group {
+    gap: 21px;
+    border: none;
+}
+
+.card-group .card {
+    border: none;
+    background-color: #1C1C21;
+    border-radius: 10px !important;
+}
+
+.col-6.card-redirect {
+    background-color: #070708;
+    border-radius: 30px;
+    text-align: center;
+    padding-top: 5px;
+    gap: 5px;
+}
+
+.col-6.card-redirect a {
+    font-size: 15px;
+    text-decoration: none;
+    color: grey;
+    padding: 10px;
+    border: 1px grey solid;
+    border-radius: 100%;
+    margin: 3px;
+}
+
+.card-title {
+    color: #E4E4E6;
+}
+
+.card-title span {
+    color: #62646C;
+}
+
+h5.damien-big-text {
+    font-size: 155px;
+    text-align: right;
+    padding-top: 65px;
+}
+
+div.footer-banner {
+    background-color: #0E0E10;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 10px;
+}
+
+footer div .row .e-normal {
+    position: absolute;
+    width: 15%;
+    max-width: 380px;
+    left: 0px;
+    padding-left: 0;;
+}
+
+footer div .row .e-reverse {
+    position: absolute;
+    width: 15%;
+    max-width: 380px;
+    right: 0px;
+    padding-right: 0;;
+}
+
+footer div.container {
+    padding-top: 35px;
+}
+
+footer .text-meaningful {
+    color: #797C86;
+    font-size: 14px;
+}
+
+footer p.let-btn-wrk {
+    color: #fff;
+    max-width:484px;
+    font-size: 30px;
+}
+
+footer p.let-btn-wrk button {
+    background-color: #4A2CED;
+    border-radius: 25px;
+    border: none;
+    color: #fff;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+
+footer div.col-3 p {
+    color: #fff;
+}
+
+footer .container .row div.col-3 p:first-child {
+    color: #797C86;
+    padding-bottom: 30px;
+    text-transform: uppercase;
+    font-size: 14px;
+}
+
+.footer-socials {
+    background-color: #070708;
+    width: auto;
+    border-radius: 30px;
+    text-align: center;
+    padding-top: 5px;
+}
+
+.footer-socials a {
+    font-size: 15px;
+    text-decoration: none;
+    color: grey;
+    padding: 10px;
+    border: 1px grey solid;
+    border-radius: 100%;
+    margin: 3px;
+}
+
+
+div.col-5 a, div.col-5 p{
+    color: #797C86;
 }
