--- a/7-js-dom/receptai/styles.css
+++ b/7-js-dom/receptai/styles.css
@@ -1,11 +1,7 @@
 body {
-    background: #efefef;
+    background: #EFEFEF;
     margin: 0;
     padding: 0;
-}
-
-* {
-    box-sizing: border-box;
 }
 
 .block-container {
@@ -23,32 +19,30 @@ body {
 
 .block-container .korteles {
     display: flex;
-    gap: 10px;
-    flex-wrap: wrap; 
+    gap: 20px
 }
 
 .block-container .korteles .kortele {
     cursor: pointer;
     width: 133px;
-    border: 1px solid #e6e6e6;
-    position: relative; 
+    border: 1px solid #E6E6E6;
+    position: relative;
 }
 
-.block-container .korteles .kortele .text {
+.block-container .korteles .kortele .text{
     padding: 0px 15px;
 }
 
 .block-container .korteles .kortele img.active {
     position: absolute;
-    top: 0;
+    top:0;
     right: 0;
 }
 
 .block-container .korteles .kortele img.hide {
-    display: none; 
+    display: none;
 }
 
-/* Range Slider Styling */
 .porcijos input[type="range"] {
     cursor: pointer;
     appearance: none;
@@ -64,12 +58,12 @@ body {
 .porcijos input[type=range]::-webkit-slider-thumb {
     appearance: none;
     background-color: black;
-    height: 5px;
+    height: 10px;
     width: 10px;
     border-radius: 50px;
-    margin-top: 0; 
+    margin-top: -5px;
 }
 
-.porcijos p {
+.porcijos  p {
     margin-bottom: 0;
 }
